--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/EliteCoder21/crypto-portfolio-web3-private#readme",
   "dependencies": {
+    "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "dotenv": "^16.3.1",
     "ethers": "^6.6.7",
