--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.2",
     "tls": "^0.0.1",
     "viem": "^0.3.50",
     "wagmi": "^1.0.9"
   },
   "devDependencies": {
-    "@types/react": "18.2.14"
+    "@types/react": "18.2.14",
+    "tailwindcss": "^3.3.3"
   },
   "description": "Web app for crypto",
   "main": "next.config.js",
