--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "encoding": "^0.1.13",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "fs": "^0.0.1-security",
     "lokijs": "^1.5.12",
+    "metamask": "^0.0.1-security",
     "next": "13.4.4",
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.2",
+    "supabase": "^1.83.7",
     "tls": "^0.0.1",
     "viem": "^0.3.50",
     "wagmi": "^1.0.9"
