--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.4.4",
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.2",
     "supabase": "^1.83.7",
