--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lokijs": "^1.5.12",
     "metamask": "^0.0.1-security",
     "next": "13.4.4",
+    "node": "^20.5.0",
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
