--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "alchemy": "^0.0.8",
+    "alchemy-sdk": "^2.9.2",
     "connectkit": "^1.4.0",
     "encoding": "^0.1.13",
     "eslint": "8.42.0",
