--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-trello": "^2.2.11",
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
     "viem": "^0.3.50",
