--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.8",
+    "@styled-icons/fa-brands": "^10.47.0",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "connectkit": "^1.4.0",
@@ -29,11 +30,17 @@
     "next": "13.4.4",
     "node": "^20.5.0",
     "pino-pretty": "^10.0.0",
+    "plotly": "^1.0.6",
+    "plotly.js": "^2.26.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-native": "^0.72.4",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.7.4",
     "react-trello": "^2.2.11",
+    "styled-icons": "^10.47.0",
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
     "viem": "^0.3.50",
