--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pino-pretty": "^10.0.0",
     "plotly": "^1.0.6",
     "plotly.js": "^2.26.0",
+    "plotly.js-basic-dist-min": "^2.26.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
@@ -40,6 +41,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-trello": "^2.2.11",
+    "reactjs-popup": "^2.0.6",
     "styled-icons": "^10.47.0",
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
