--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.4",
+    "react-native-web": "^0.19.9",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
