--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-trello": "^2.2.11",
+    "react-wrap-balancer": "^1.1.0",
     "reactjs-popup": "^2.0.6",
     "styled-icons": "^10.47.0",
     "supabase": "^1.83.7",
