--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lokijs": "^1.5.12",
     "metamask": "^0.0.1-security",
     "next": "13.4.4",
-    "node": "^20.5.0",
+    "node": "20.5.0",
     "pino-pretty": "^10.0.0",
     "plotly": "^1.0.6",
     "plotly.js": "^2.26.0",
