--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@styled-icons/fa-brands": "^10.47.0",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
+    "clsx": "^2.0.0",
     "connectkit": "^1.4.0",
     "d3": "^7.8.5",
     "encoding": "^0.1.13",
