worked on kanban board

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase-admin": "^11.10.1",
     "fs": "^0.0.1-security",
     "lokijs": "^1.5.12",
+    "material": "^0.7.8",
     "metamask": "^0.0.1-security",
     "next": "13.4.4",
     "node": "20.5.0",
@@ -38,6 +39,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-native": "^0.72.4",
     "react-native-web": "^0.19.9",
     "react-plotly.js": "^2.6.0",
