--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
     "viem": "^0.3.50",
-    "wagmi": "^1.0.9"
+    "wagmi": "^1.0.9",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
