--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.8",
     "@styled-icons/fa-brands": "^10.47.0",
+    "@uniswap/widgets": "2.24.0",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "clsx": "^2.0.0",
@@ -27,6 +28,7 @@
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
     "fs": "^0.0.1-security",
+    "jotai-immer": "^0.3.0",
     "lokijs": "^1.5.12",
     "material": "^0.7.8",
     "metamask": "^0.0.1-security",
@@ -43,6 +45,7 @@
     "react-native": "^0.72.4",
     "react-native-web": "^0.19.9",
     "react-plotly.js": "^2.6.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-trello": "^2.2.11",
