--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
   },
   "devDependencies": {
     "@types/react": "18.2.14",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.90.1"
   },
   "description": "Web app for crypto",
   "main": "next.config.js",
