--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.8",
     "@styled-icons/fa-brands": "^10.47.0",
-    "@uniswap/widgets": "2.51.2",
+"@uniswap/widgets": "2.51.2",
+    "@wagmi/connectors": "^4.1.26",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "clsx": "^2.0.0",
@@ -45,7 +46,7 @@
     "react-native": "^0.72.4",
     "react-native-web": "^0.19.9",
     "react-plotly.js": "^2.6.0",
-    "react-redux": "^9.0.4",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-trello": "^2.2.11",
