worked on kanban board

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.8",
     "@styled-icons/fa-brands": "^10.47.0",
-"@uniswap/widgets": "2.51.2",
+    "@uniswap/conedison": "^1.8.0",
+    "@uniswap/v3-sdk": "^3.11.1",
+    "@uniswap/widgets": "2.59.0",
     "@wagmi/connectors": "^4.1.26",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
@@ -39,6 +41,7 @@
     "plotly": "^1.0.6",
     "plotly.js": "^2.26.0",
     "plotly.js-basic-dist-min": "^2.26.0",
+    "python": "^0.0.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
