--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.8",
     "@styled-icons/fa-brands": "^10.47.0",
+    "@tanstack/react-query": "5",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "clsx": "^2.0.0",
@@ -49,8 +50,8 @@
     "styled-icons": "^10.47.0",
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
-    "viem": "^0.3.50",
-    "wagmi": "^1.0.9"
+    "viem": "2.x",
+    "wagmi": "2.x"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
