--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.8",
     "@styled-icons/fa-brands": "^10.47.0",
     "@tanstack/react-query": "5",
+    "@uniswap/widgets": "^2.59.0",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "clsx": "^2.0.0",
@@ -46,7 +47,7 @@
     "react-native": "^0.72.4",
     "react-native-web": "^0.19.9",
     "react-plotly.js": "^2.6.0",
-    "react-redux": "^9.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-trello": "^2.2.11",
