--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.8",
     "@styled-icons/fa-brands": "^10.47.0",
-    "@tanstack/react-query": "^5",
+    "@tanstack/react-query": "^5.40.0",
+    "@web3modal/wagmi": "^4.2.3",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
     "clsx": "^2.0.0",
@@ -55,8 +56,8 @@
     "styled-icons": "^10.47.0",
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
-    "viem": "2.x",
-    "wagmi": "2.x",
+    "viem": "^2.13.2",
+    "wagmi": "^2.9.8",
     "yup": "^1.3.3"
   },
   "devDependencies": {
