--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "react-plotly.js": "^2.6.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.14.2",
-    "react-select": "^5.7.4",
+    "react-select": "3.0.4",
     "react-trello": "^2.2.11",
     "react-wrap-balancer": "^1.1.0",
     "reactjs-popup": "^2.0.6",
     "styled-icons": "^10.47.0",
     "supabase": "^1.83.7",
     "tls": "^0.0.1",
+    "usetheform": "^3.4.1",
     "viem": "^2.13.2",
     "wagmi": "^2.9.8",
     "yup": "^1.3.3"
