--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@web3modal/wagmi": "^4.2.3",
     "alchemy": "^0.0.8",
     "alchemy-sdk": "^2.9.2",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.0.0",
     "connectkit": "^1.7.0",
     "d3": "^7.8.5",
@@ -40,8 +41,8 @@
     "plotly.js": "^2.26.0",
     "plotly.js-basic-dist-min": "^2.26.0",
     "python": "^0.0.4",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-native": "^0.72.4",
@@ -49,7 +50,7 @@
     "react-plotly.js": "^2.6.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.14.2",
-    "react-select": "3.0.4",
+    "react-select": "^5.8.0",
     "react-trello": "^2.2.11",
     "react-wrap-balancer": "^1.1.0",
     "reactjs-popup": "^2.0.6",
